@@ -1,3 +1,7 @@
+2005-03-09  Mark Mitchell  <mark@codesourcery.com>
+
+	* libiberty.h (gettimeofday): Declare.
+
 2005-03-01  Jan Beulich  <jbeulich@novell.com>
 
 	* libiberty.h: Declare unlink_if_ordinary.
